[package]
name = "apple_products_parser"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A tool that processes detailed data about Apple products(Iphones, MacBooks and IPads)"


[dependencies]
thiserror = "1.0"
pest = "2.7.14"
pest_derive = "2.7.14"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5"

